<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".Auth.EmployerSignup">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/large_margin">

            <TextView
                android:id="@+id/tvSignupHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="@dimen/large_margin"
                android:fontFamily="@font/dm_sans_bold"
                android:text="@string/signup_fragment_heading"
                android:textColor="@color/text_color"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/tvSignupSubHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/small_margin"
                android:fontFamily="@font/dm_sans_regular"
                android:text="@string/signup_fragment_sub_heading"
                android:textColor="@color/subheading_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/extra_large_margin"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/etFirstNameContainer"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginEnd="@dimen/small_margin"
                    android:hint="@string/field_first_name"
                    app:boxStrokeColor="@color/box_stroke_color"
                    app:errorEnabled="true"
                    app:hintTextColor="@color/text_color">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etFirstName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/dm_sans_medium"
                        android:inputType="textPersonName" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/etLastNameContainer"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="@dimen/small_margin"
                    android:hint="@string/field_last_name"
                    app:boxStrokeColor="@color/box_stroke_color"
                    app:errorEnabled="true"
                    app:hintTextColor="@color/text_color">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etLastName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/dm_sans_medium"
                        android:inputType="textPersonName" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etMobileNoContainer"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:hint="@string/field_mobile_no"
                app:boxStrokeColor="@color/box_stroke_color"
                app:errorEnabled="true"
                app:hintTextColor="@color/text_color"
                app:startIconDrawable="@drawable/ic_phone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etMobileNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dm_sans_medium"
                    android:inputType="phone"
                    android:maxLength="11" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etEmailContainer"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:hint="@string/field_email"
                app:boxStrokeColor="@color/box_stroke_color"
                app:errorEnabled="true"
                app:hintTextColor="@color/text_color"
                app:startIconDrawable="@drawable/ic_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dm_sans_medium"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etPasswordContainer"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:hint="@string/field_password"
                app:boxStrokeColor="@color/box_stroke_color"
                app:endIconMode="password_toggle"
                app:errorEnabled="true"
                app:hintTextColor="@color/text_color"
                app:startIconDrawable="@drawable/ic_password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dm_sans_medium"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etAddressContainer"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:hint="@string/field_address"
                app:boxStrokeColor="@color/box_stroke_color"
                app:errorEnabled="true"
                app:hintTextColor="@color/text_color"
                app:startIconDrawable="@drawable/ic_city">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dm_sans_medium"
                    android:inputType="textPostalAddress" />
            </com.google.android.material.textfield.TextInputLayout>
            <!-- Country Field -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etCountryContainer"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:hint="Country"
                app:boxStrokeColor="@color/box_stroke_color"
                app:errorEnabled="true"
                app:hintTextColor="@color/text_color"
                app:startIconDrawable="@drawable/baseline_360_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etCountry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dm_sans_medium"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etCityContainer"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:hint="@string/field_city"
                app:boxStrokeColor="@color/box_stroke_color"
                app:errorEnabled="true"
                app:hintTextColor="@color/text_color"
                app:startIconDrawable="@drawable/ic_city">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dm_sans_medium"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/medium_margin"
                android:layout_marginTop="@dimen/extra_large_margin"
                android:backgroundTint="@color/button_color"
                android:fontFamily="@font/dm_sans_medium"
                android:padding="@dimen/button_padding"
                android:text="@string/field_signup"
                android:textColor="@color/button_text_color"
                android:textSize="16sp"
                app:cornerRadius="6dp" />

            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:text="@string/login_prompt"
                android:textColor="@color/text_color"
                android:textSize="14sp" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>